// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1 duplicate identifier with 2 duplicates 1`] = `
Array [
  Object {
    "locations": Array [
      Array [
        0,
        1,
      ],
      Array [
        1,
        1,
      ],
    ],
    "message": "Duplicate identifier: @someFn",
  },
]
`;

exports[`1 duplicate identifier with 3 duplicates 1`] = `
Array [
  Object {
    "locations": Array [
      Array [
        0,
        1,
      ],
      Array [
        1,
        1,
      ],
      Array [
        2,
        1,
      ],
    ],
    "message": "Duplicate identifier: @doStuff",
  },
]
`;

exports[`2 duplicate identifiers with 2 duplicates 1`] = `
Array [
  Object {
    "locations": Array [
      Array [
        0,
        1,
      ],
      Array [
        2,
        1,
      ],
    ],
    "message": "Duplicate identifier: @a",
  },
  Object {
    "locations": Array [
      Array [
        1,
        1,
      ],
      Array [
        3,
        1,
      ],
    ],
    "message": "Duplicate identifier: @b",
  },
]
`;
